# vs-vpn-2

./: .gitignore  AGENTS.md  Cargo.toml  check.sh  schema.json
.github/workflows/: ci.yml
src/: config.rs  main.rs
