[package]
name = "vs-vpn-2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1.2"
serde_yaml_bw = "2.5"
serde_json = "1"
serde_path_to_error = "0.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
